--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://moEssamDev.github.io/netflix-clone/",
   "name": "netflix-clone",
   "private": true,
   "version": "0.0.0",
